sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: value by is not a member of Int
for(i <- getNombreValeurs() by 1)
                            ^